# CPP

./: CMakeLists.txt
Class Oppgaver/Oppgaver0/: task1.cpp  task3  task3.cpp
Class Oppgaver/Oppgaver2/: GameManager.cpp
Forelesning_6/: PG4400_06_SimpleDirectmediaLayer.pptx  PG4400_07_DesignPatterns_timing.pptx  main.cpp
HELLOWORLD/: CMakeLists.txt  helloworld  main
HVL/Lecture - 10 - Examples - Advanced SDK Graphics/: Lecture - 10 - Advanced SDK Graphics.sln
HVL/Lecture - 11 - SDK Misc/: Lecture - 11 - SDK Misc.sln
HVL/Lecture - 13 - GUI Options/: Lecture - 13 - GUI Options.sln
HVL/Lecture - 14 - Events and Delegates/: Lecture - 14 - Delegates and Events.sln
HVL/Lecture - 15 - Graphics in .net/: Lecture 15 - Graphics in .net.sln
HVL/Lecture - 21 - Linq and Databases 2/: Lecture - 21 - Linq and Databases 2.sln
HVL/Lecture - 22 - Web Development/: Lecture - 22 - Web Development.sln
HVL/Lecture - 9 - Intro .NET/: DEMO_L9.sln
HVL/Lecture 6/: CMakeLists.txt  PG4400_08_Streams.pptx  PG4400_Oppgave_7.docx
HVL/MultipleProject/: MultipleProject.sln
Lecture 12/: Lecture - 12 - Namespaces and Libraries.sln
Lecture 12/3 - Properties/: 3 - Properties.csproj  Program.cs
Oppgaver/: PG4400_01_Oppgaver.docx
Oppgaver0/: task1  task2.cpp
Oppgaver1/: CMakeLists.txt  main  main.cpp  oppgaver1  ~$4400_01_Oppgaver.docx
Oppgaver2/: PG4400_02_Oppgaver.doc  main.cpp
Presentation/: test_my_module.py
Presentation/Class/: main.cpp  wizard.cpp
Presentation/Franchise/: class
Presentation/Lecture2/: main.cpp  pointer2.cpp  pointer3  tempCodeRunnerFile.cpp
(+439 files in other folders)
